--- a/index.html
+++ b/index.html
@@ -18,6 +18,25 @@
 
 <body>
 
+    <header>
+        <div class="container">
+            <div class="mc-container-height d-flex justify-content-between align-items-center">
+                <div class="left">
+                    <h4 class="m-0">START BOOTSTRAP</h4>
+                </div>
+                <div class="right d-block d-sm-none">menu</div>
+                <div class="d-none d-sm-block">
+                    <ul class="d-flex list-unstyled gap-4 m-0">
+                        <li>PORTFOLIO</li>
+                        <li>ABOUT</li>
+                        <li>CONTACT</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+    </header>
+
 </body>
 
 </html>
