--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body>
 
     <header>
+        <!-- menù container -->
         <div class="container">
             <div class="mc-container-height d-flex justify-content-between align-items-center">
                 <div class="left">
@@ -34,8 +35,108 @@
                 </div>
             </div>
         </div>
-
+        <!-- /menù container -->
     </header>
+
+    <main>
+        <!-- sezione 1 -->
+        <section class="mc-height-sez1">
+            <div class="container text-center">
+                <div class="debug-img pt-5">IMG</div>
+                <div>
+                    <h2>START BOOTSTRAP</h2>
+                </div>
+                <div>A-B-C</div>
+            </div>
+        </section>
+        <!-- /sezione 1 -->
+
+        <!-- sezione 2 -->
+        <section class="">
+            <div class="container text-center">
+                <h3 class="pt-3">PORTFOLIO</h3>
+                <div class="row">
+                    <div class="col-12 col-sm-6 col-md-4">
+                        IMG
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-4">
+                        IMG
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-4">
+                        IMG
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-4">
+                        IMG
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-4">
+                        IMG
+                    </div>
+                    <div class="col-12 col-sm-6 col-md-4">
+                        IMG
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- /sezione 2 -->
+
+        <!-- sezione 3 -->
+        <section class="mc-height-sez3">
+            <div class="container text-center mc-widht-sez3">
+                <h3 class="pt-5">ABOUT</h3>
+                <hr>
+                <div class="d-sm-flex">
+                    <p class="col-sm-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ut vitae commodi
+                        ea fuga
+                        repudiandae
+                        ducimus quos assumenda temporibus cum, aperiam, animi asperiores vel dolorum, vero nisi atque
+                        non
+                        sunt!</p>
+                    <p class="col-sm-6">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus laudantium,
+                        quos, illo hic
+                        excepturi in aperiam eveniet ex non sit impedit. Error nulla facilis voluptate dolor, est quidem
+                        autem aliquid?</p>
+                </div>
+                DOWNLOAD
+            </div>
+        </section>
+        <!-- /sezione 3 -->
+
+        <!-- sezione 4 -->
+        <section>
+            <div class="container text-center mc-height-sez4">
+                INPUT
+            </div>
+        </section>
+        <!-- /sezione 4 -->
+
+    </main>
+
+    <footer></footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 </body>
 
