--- a/index.html
+++ b/index.html
@@ -111,7 +111,31 @@
 
     </main>
 
-    <footer></footer>
+    <footer>
+        <div class="mc-color-foot">
+            <div class="container text-center mc-height-footer">
+                <div class="row pt-5">
+                    <div class="col-12 col-sm-4">A</div>
+                    <div class="col-12 col-sm-4">B</div>
+                    <div class="col-12 col-sm-4">C</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="mc-color-copyr">
+            <div class="container text-center mc-height-copyr">
+                COPYRIGHT
+            </div>
+
+        </div>
+
+
+
+
+
+
+
+    </footer>
 
 
 
