feat: main sezione 3

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <!-- sezione 2 -->
         <section class="portfolio">
             <div class="container text-center mc-padding-bm">
-                <h2 class="pt-3 mc-color-sez2 display-4 fw-bold pt-5">PORTFOLIO</h2>
+                <h2 class="pt-3 mc-color-sez2 display-4 fw-bold pt-5 text-uppercase">portfolio</h2>
                 <div class="mc-star-var"><i class="fa-solid fa-star"></i></div>
 
                 <div class="row g-3">
@@ -102,31 +102,40 @@
         <!-- /sezione 2 -->
 
         <!-- sezione 3 -->
-        <section class="mc-height-sez3">
-            <div class="container text-center mc-widht-sez3">
-                <h3 class="pt-5">ABOUT</h3>
-                <hr>
-                <div class="d-sm-flex">
-                    <p class="col-sm-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ut vitae commodi
-                        ea fuga
-                        repudiandae
-                        ducimus quos assumenda temporibus cum, aperiam, animi asperiores vel dolorum, vero nisi atque
-                        non
-                        sunt!</p>
-                    <p class="col-sm-6">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus laudantium,
-                        quos, illo hic
-                        excepturi in aperiam eveniet ex non sit impedit. Error nulla facilis voluptate dolor, est quidem
-                        autem aliquid?</p>
+        <section class="mc-color-sez3">
+            <div class="container text-center mc-color-sez3">
+                <h2 class="pt-3 text-white display-4 fw-bold pt-5 text-uppercase">about</h2>
+                <div class="mc-star"><i class="fa-solid fa-star"></i></div>
+                <div class="row">
+                    <div class="row g-2 px-5">
+                        <div class="col-12 col-lg-6 col-xxl-6">
+                            <p class="text-start fs-5">Freelancer is a free bootstrap theme created by Start
+                                Bootstrap.
+                                The
+                                download includes
+                                the complete source files including HTML, CSS, and JavaScript as well as optional LESS
+                                stylesheets for easy customization.</p>
+                        </div>
+                        <div class="col-12 col-lg-6 col-xxl-6">
+                            <p class="text-start fs-5">Whether you're a student looking to showcase your work, a
+                                professional
+                                looking to attract
+                                clients, or a graphic artist looking to share your projects, this template is the
+                                perfect starting point!</p>
+                        </div>
+                    </div>
                 </div>
-                DOWNLOAD
-            </div>
+                <button class="btn text-white border mt-2 mc-mb-btn fs-5"><i class="fa-solid fa-download"></i>
+                    Download</button>
         </section>
         <!-- /sezione 3 -->
 
         <!-- sezione 4 -->
-        <section>
+        <section class="contact">
             <div class="container text-center mc-height-sez4">
-                INPUT
+                <h2 class="pt-3 mc-color-sez2 display-4 fw-bold pt-5 text-uppercase">contact me</h2>
+                <div class="mc-star-var"><i class="fa-solid fa-star"></i></div>
+
             </div>
         </section>
         <!-- /sezione 4 -->
