--- a/index.html
+++ b/index.html
@@ -131,13 +131,34 @@
         <!-- /sezione 3 -->
 
         <!-- sezione 4 -->
-        <section class="contact">
-            <div class="container text-center mc-height-sez4">
+        <section class="container px-5">
+            <div class="container text-center">
                 <h2 class="pt-3 mc-color-sez2 display-4 fw-bold pt-5 text-uppercase">contact me</h2>
                 <div class="mc-star-var"><i class="fa-solid fa-star"></i></div>
-
             </div>
+            <div class="form-floating mb-3">
+                <input type="name" class="form-control border-0 border-bottom rounded-0 border-secondary-subtle"
+                    id="floatingInput" placeholder="name@example.com">
+                <label for="floatingInput">Name</label>
+            </div>
+            <div class="form-floating mb-3">
+                <input type="email" class="form-control border-0 border-bottom rounded-0 border-secondary-subtle"
+                    id="floatingInput" placeholder="name@example.com">
+                <label for="floatingInput">Email address</label>
+            </div>
+            <div class="form-floating mb-3">
+                <input type="phone" class="form-control border-0 border-bottom rounded-0 border-secondary-subtle"
+                    id="floatingname" placeholder="Phone Number">
+                <label for="floatingname">Phone Number</label>
+            </div>
+            <div class="form-floating mb-3">
+                <textarea class="form-control border-0 border-bottom rounded-0 border-secondary-subtle"
+                    placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+                <label for="floatingTextarea2">Message</label>
+            </div>
+            <button type="submit" class="btn btn-primary text-start mc-color-btn mb-5 border-0">Send</button>
         </section>
+
         <!-- /sezione 4 -->
 
     </main>
