--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <!-- /sezione 3 -->
 
         <!-- sezione 4 -->
-        <section class="container px-5">
+        <section class="container mc-padd-sez-4 pb-5">
             <div class="container text-center">
                 <h2 class="pt-3 mc-color-sez2 display-4 fw-bold pt-5 text-uppercase">contact me</h2>
                 <div class="mc-star-var"><i class="fa-solid fa-star"></i></div>
@@ -160,29 +160,52 @@
         </section>
 
         <!-- /sezione 4 -->
-
     </main>
 
     <footer>
         <div class="mc-color-foot">
-            <div class="container text-center mc-height-footer">
-                <div class="row pt-5">
-                    <div class="col-12 col-sm-4">A</div>
-                    <div class="col-12 col-sm-4">B</div>
-                    <div class="col-12 col-sm-4">C</div>
+            <div class="container text-center pb-5 mc-pad-foot">
+                <div class="row pt-5 g-5">
+                    <div class="col-12 col-lg-4">
+                        <div class="row">
+                            <div class="col-12 text-uppercase fs-5">location</div>
+                            <div class="col-12">2215john Daniel Drive Clark, MO 54243</div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <div class="row">
+                            <div class="col-12 text-uppercase fs-5">around the web</div>
+                            <div class="col-12 mc-i-circle">
+                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="#"><i class="fa-brands fa-google-plus-g"></i></a>
+                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <div class="row">
+                            <div class="col-12 text-uppercase fs-5">about freelancer</div>
+                            <div class="col-12">
+                                <p> Freelance is a free to use, open source Bootstrap theme
+                                    created
+                                    by <span class="mc-span-bg">Start
+                                        Bootstrap</span>.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
 
         <div class="mc-color-copyr">
             <div class="container text-center mc-height-copyr d-flex align-items-center justify-content-center">
-                <div>COPYRIGHT</div>
+                <div class="text-white">Copyright © Your Website 2019</div>
             </div>
 
         </div>
 
     </footer>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
