--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header>
         <!-- menù container -->
         <div class="container">
-            <nav class="navbar navbar-expand-md py-3 text-uppercase" data-bs-theme="dark">
+            <nav class="navbar navbar-expand-md py-4 text-uppercase" data-bs-theme="dark">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#">start bootstrap</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -58,13 +58,15 @@
             <div class="container text-center">
                 <div class="mc-img pt-4"><img src="img/avatar.svg" class="img-fluid" alt="avatar"></div>
                 <div>
-                    <h1 class="display-3 text-uppercase fw-bold pt-3">start bootstrap</h1>
+                    <h1 class="display-3 text-uppercase fw-semibold pt-3">start bootstrap</h1>
                 </div>
 
                 <div class="mc-star"><i class="fa-solid fa-star"></i></div>
-                <div class="fs-4 text-center text-uppercase mc-padding-bm">graphic artist - web designer -
+
+
+                <p class="fs-4 text-center text-uppercase mc-padding-bm">graphic artist - web designer -
                     illustrator
-                </div>
+                </p>
             </div>
         </section>
         <!-- /sezione 1 -->
@@ -138,22 +140,22 @@
             </div>
             <div class="form-floating mb-3">
                 <input type="name" class="form-control border-0 border-bottom rounded-0 border-secondary-subtle"
-                    id="floatingInput" placeholder="name@example.com">
-                <label for="floatingInput">Name</label>
+                    id="form-name" placeholder="">
+                <label for="form-name">Name</label>
             </div>
             <div class="form-floating mb-3">
                 <input type="email" class="form-control border-0 border-bottom rounded-0 border-secondary-subtle"
-                    id="floatingInput" placeholder="name@example.com">
-                <label for="floatingInput">Email address</label>
+                    id="form-email" placeholder="">
+                <label for="form-email">Email address</label>
             </div>
             <div class="form-floating mb-3">
                 <input type="phone" class="form-control border-0 border-bottom rounded-0 border-secondary-subtle"
-                    id="floatingname" placeholder="Phone Number">
-                <label for="floatingname">Phone Number</label>
+                    id="form-phone" placeholder="">
+                <label for="form-phone">Phone Number</label>
             </div>
             <div class="form-floating mb-3">
-                <textarea class="form-control border-0 border-bottom rounded-0 border-secondary-subtle"
-                    placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+                <textarea class="form-control border-0 border-bottom rounded-0 border-secondary-subtle" placeholder=""
+                    id="floatingTextarea2" style="height: 100px"></textarea>
                 <label for="floatingTextarea2">Message</label>
             </div>
             <button type="submit" class="btn btn-primary text-start mc-color-btn mb-5 border-0">Send</button>
@@ -176,10 +178,10 @@
                         <div class="row">
                             <div class="col-12 text-uppercase fs-5">around the web</div>
                             <div class="col-12 mc-i-circle">
-                                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                                <a href="#"><i class="fa-brands fa-google-plus-g"></i></a>
-                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                                <a class="component-social-icon" href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a class="component-social-icon" href="#"><i class="fa-brands fa-google-plus-g"></i></a>
+                                <a class="component-social-icon" href="#"><i class="fa-brands fa-twitter"></i></a>
+                                <a class="component-social-icon" href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                             </div>
                         </div>
                     </div>
